// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormRenderer test Render form with actions 1`] = `
<div>
  <form
    class="pf-c-form"
    data-ouia-component-type="form-renderer"
    data-ouia-safe="true"
    novalidate=""
  />
  <div
    class="kogito-components-common__form-footer-padding-top"
    data-ouia-component-type="form-footer"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-action-list"
      data-testid="action-list"
    >
      <div
        class="pf-c-action-list__item"
        data-testid="action-list-item"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="submit"
        >
          Complete
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormRenderer test Render form without actions 1`] = `
<div>
  <form
    class="pf-c-form"
    data-ouia-component-type="form-renderer"
    data-ouia-safe="true"
    novalidate=""
  />
</div>
`;
